clusters/vollminlab-cluster/kyverno/policyreporter/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter-ui
  namespace: kyverno
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Policy Reporter"
    gethomepage.dev/description: "Kubernetes policy reporting"
    gethomepage.dev/group: "Monitoring & Observability"
    gethomepage.dev/icon: "mdi-shield-check"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=policy-reporter-ui"
    shlink.vollminlab.com/slug: policyreporter
  labels:
    app: policy-reporter
    env: production
    category: security
spec:
  ingressClassName: nginx
  rules:
    - host: policyreporter.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
  tls:
    - hosts:
        - policyreporter.vollminlab.com
      secretName: wildcard-tls
